Bug 312656 - VPN connections export/import and space in paths
Summary: VPN connections export/import and space in paths
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-05 09:14 UTC by Yuriy Vidineev
Modified: 2013-01-05 20:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuriy Vidineev 2013-01-05 09:14:09 UTC
I have one setuped OpenVPN connection and trying to "clone" (export/import) them. If some files (for example, keys and certificates) have space in paths - it will not import correctly

P.S. Sorry for my English

Reproducible: Always

Steps to Reproduce:
1. Create OpenVPN connection. Path to key or certificate must be with space. For example:
ca /home/adept/Ubuntu One/openvpn/ca.crt
2. Export this connection. Check that in exported file path for ca.crt is correct
3. Import this connection. Path to ca will be:
ca /home/adept/Ubuntu
Comment 1 Lamarque V. Souza 2013-01-05 17:34:57 UTC
You should quote any file name containing spaces, like this:

ca "/home/adept/Ubuntu One/openvpn/ca.crt"

space is the key/value delimeter so it cannot be used in the value part unless it is quoted.
Comment 2 Yuriy Vidineev 2013-01-05 18:40:16 UTC
Yes, I can edit exported file and quote filenames. But, maybe, export tool can do it for me?
Comment 3 Lamarque V. Souza 2013-01-05 20:41:29 UTC
Git commit 99447f718aa5294356b7394bd17b242635d7c489 by Lamarque V. Souza.
Committed on 05/01/2013 at 21:34.
Pushed by lvsouza into branch 'master'.

Quote file names when exporting openvpn configuration file in case they contain
white spaces in their file names.
FIXED-IN: 0.9.0.7

M  +7    -7    vpnplugins/openvpn/openvpn.cpp

http://commits.kde.org/networkmanagement/99447f718aa5294356b7394bd17b242635d7c489
Comment 4 Lamarque V. Souza 2013-01-05 20:44:31 UTC
Git commit 1e46b934193ae7251de4e8e853aa4a76ee1e2d17 by Lamarque V. Souza.
Committed on 05/01/2013 at 21:34.
Pushed by lvsouza into branch 'nm09'.

Quote file names when exporting openvpn configuration file in case they contain
white spaces in their file names.
FIXED-IN: 0.9.0.7
(cherry picked from commit 99447f718aa5294356b7394bd17b242635d7c489)

M  +7    -7    vpnplugins/openvpn/openvpn.cpp

http://commits.kde.org/networkmanagement/1e46b934193ae7251de4e8e853aa4a76ee1e2d17