Quote file names when exporting openvpn configuration file in case they contain white spaces in their file names.

BUG: 312656
FIXED-IN: 0.9.0.7